# FlowBack

./: .gitignore  README.md  pyproject.toml
backend/: database.py  main.py  requirements.txt
flowback/: capture.py  cli.py  database.py  gemini.py  llm.py  mcp_server.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: BriefingCard.jsx  ErrorGraph.jsx  PauseScreen.jsx  ResumeScreen.jsx  TagPanel.jsx
