[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "flowback"
version = "0.1.0"
description = "Pick up exactly where you left off."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "mcp>=1.0.0",
]

[project.scripts]
flowback = "flowback.cli:app"
flowback-mcp = "flowback.mcp_server:main"

[tool.setuptools.packages.find]
include = ["flowback*"]
